--- a/Final/Info.plist
+++ b/Final/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>画像の保存を許可します</string>
 	<key>NSCameraUsageDescription</key>
 	<string>AR実験のためカメラの使用を許可します。</string>
 	<key>CFBundleDevelopmentRegion</key>
